<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:onClick="Pre"
            android:icon="@drawable/ic_baseline_list_alt_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_About"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/about_us" />

        <item
            android:id="@+id/nav_slideshow"
            android:onClick="rating"
            android:icon="@drawable/ic_baseline_star_rate_24"
            android:title="@string/rate_us" />







    </group>

</menu>
