<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/VE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/please_verify_your_email"
            android:textColor="#E53935"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/text1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="151dp"
            android:layout_height="97dp"
            android:layout_marginTop="40dp"
            android:foregroundGravity="center"
            app:layout_constraintBottom_toTopOf="@+id/text1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.223"
            app:srcCompat="@drawable/l1"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="121dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:fontFamily="abril_fatface"
            android:gravity="center_horizontal"
            android:scrollbarStyle="outsideOverlay"
            android:text="@string/login"
            android:textColor="#43A047"
            android:textSize="28sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.352" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="50dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/enter_your_e_mail"
            android:stateListAnimator="@android:anim/bounce_interpolator"
            app:endIconMode="clear_text"
            app:helperTextTextColor="#E60C07"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/loadingProgress"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:foregroundGravity="center"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/text3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.556" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:gravity="center"
        android:hint="Password"
        android:selectAllOnFocus="true"
        app:endIconMode="password_toggle"
        app:helperTextTextColor="#E60C07"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/fpassword"
            android:layout_width="191dp"
            android:layout_height="48dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="2dp"
            android:gravity="center_horizontal"
            android:minHeight="48dp"
            android:onClick="Forget_pass"
            android:text="Forget Password ?"
            android:textColor="#43A047"
            android:textColorLink="#1DCD25"
            android:textSize="16sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Password"
            app:layout_constraintVertical_bias="0.03"
            tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/Login"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="login"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fpassword" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="Don't have account? Register"
        android:onClick="Register"
        android:textColor="#43A047"
        android:textColorHighlight="#D81B60"
        android:textColorHint="#3949AB"
        android:textColorLink="#AE3713"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>